# web-server-scratch

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/server/: httprequest.cpp  httprequest.hpp  httpserver.cpp  httpserver.hpp  tcpserver.cpp  tcpserver.hpp
src/socket/: bindsocket.cpp  bindsocket.hpp  connectsocket.cpp  connectsocket.hpp  listensocket.cpp  listensocket.hpp  socket.cpp  socket.hpp
src/utils/: my_utils.hpp
test/client/: main.py
